Fixes other options sections styles

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -22,6 +22,9 @@ span.edit-mark {
 #listaUrlsString {
     width: 45%;
 }
+.alinForm.form-inline label {
+    display: inline;
+}
 /*a.btn.btn-primary:focus,
 a.btn.btn-primary:hover{
     color: #e1120d;
