Changes source code textarea basic service form for file input

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -25,17 +25,10 @@ span.edit-mark {
 .alinForm.form-inline label {
     display: inline;
 }
-/*a.btn.btn-primary:focus,
-a.btn.btn-primary:hover{
-    color: #e1120d;
-}*/
 
 /* ESTILOS PRINCIPALES */
 /***********************/
 /* Cuerpo - Valores por defecto */
-	/*html,body{height:80%;}*/
-	/** {margin:0%;padding:0%;}*/
-	/*html {font-family: Arial, sans-serif;font-size:72%;text-align:center;color:#000;background:#FFF;}*/
 	body {background:#FFF;margin:1%;margin-bottom:0%;}
 /* Encabezados */
 	h1 {font-weight:normal;color:#8c8c8b;margin-left:0.2%;margin-top:1.2%;font-size:180%;}
@@ -52,9 +45,6 @@ a.btn.btn-primary:hover{
 	ul.topo, .rationale ul {margin:1.5% 0% 0% 5%;}
 	ul.topo li, .rationale li {list-style-image:url('../images/topo.gif');margin:0.5% 0% 0% 2%;}
 	
-/*	ul li {margin: 1em 0 0 1em}
-	ul li ul li {margin: .2em 0 0 3em}*/
-
 	.nav-stacked ul li {
 	    margin: 0 15px;
 	}
@@ -66,8 +56,7 @@ a.btn.btn-primary:hover{
 /* Formularios */
 	form {display:inline;padding:0%;margin:0%;}
 	caption {text-align:right;padding:0.3%;font-style:italic;}
-	input,input[type=file] {font-family:Arial, sans-serif;border:1px solid #777;padding:0.1% 0.4%;margin:0% 0% 0% 0.5%px;}
-/*	input[type=submit],button {text-decoration:none;margin-left:4%;padding:1% 3%;border:solid silver 1px;color:white;background:#000 url(../images/barra_menu_hover.png) bottom;}*/
+	input[type=file] {height: auto}
 	input[type=radio] {border:none;background:none;}
 
 	input:focus {border-color:#e21430;}
