Grid de semillas. Campos obligatorios en la edición

--- a/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
+++ b/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
@@ -30,3 +30,7 @@
 .ui-widget-content a , .ui-jqgrid-jquery-ui .glyphicon {
     color: #e21430 !important;
 }
+
+.pagination{
+	padding: 5px 10px;
+}
