Servicio Diagnostico - Enconding de la URL en JSP y al guardar histórico en base de datos

--- a/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
+++ b/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
@@ -34,3 +34,8 @@
 .pagination{
 	padding: 5px 10px;
 }
+
+/** Para ocultar la primera fila que mete vacía **/
+.ui-jqgrid tr.jqgfirstrow > td {
+    padding: 0 !important;
+}
