WIP: Añadida nueva metodología al servicio de diagnóstico

--- a/oaw_2017_2018/portal/src/main/webapp/styles/estilo.css
+++ b/oaw_2017_2018/portal/src/main/webapp/styles/estilo.css
@@ -98,6 +98,7 @@ span.edit-mark {
 	.formButton {padding-top:2%;text-align:center;}
 
 	.texto {min-width:30%; width:45%;}
+	.textoLargo {min-width:90%; width:100%;}
 	.textoCorto{width: 18%; float: left; margin-right: 2%}
 	.textoSelect {min-width:30%; width:46%;}
 	.textoSelectCorto {width:9%; float: left}
