Correciones edición semillas y dependencias
Test nuevas comprobaciones

--- a/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
+++ b/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
@@ -1,3 +1,7 @@
+#gbox_grid table#grid {
+	border-collapse: inherit;
+}
+
 .ui-jqgrid-htable, #grid {
 	border: none !Important;
 	margin: 0 !Important;
@@ -5,7 +9,7 @@
 }
 
 .ui-jqgrid .ui-jqgrid-bdiv {
-	overflow-x: hidden !Important;
+	overflow-x: auto !Important;
 	overflow-y: auto !Important;;
 }
 
@@ -50,5 +54,3 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
-
-    
