Desarrollo nueva metodología
Cambios en el servicio de diagnóstico: textos del mensaje de correo para la nueva metodología

Corregido error en los resultados de un observatorio para cortar nombre de semillas muy largos en el grid

--- a/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
+++ b/oaw_2017_2018/portal/src/main/webapp/css/jqgrid.semillas.css
@@ -50,6 +50,12 @@
 	-o-text-overflow: ellipsis;
 }
 
+.ui-jqgrid-cell-wrapper a {
+	overflow:hidden;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+}
+
 .listado-grid {
 	text-overflow: ellipsis;
 	overflow: hidden;
