--- a/oaw_2017_2018/portal/src/main/webapp/styles/estilo.css
+++ b/oaw_2017_2018/portal/src/main/webapp/styles/estilo.css
@@ -3,6 +3,12 @@ caption {
 	position: absolute
 }
 
+caption.global-results-caption {
+	text-align: left !important;
+	font-style: normal !important;
+	position: inherit !important;;
+}
+
 th.accion {
 	width: 100px
 }
@@ -1105,23 +1111,38 @@ ul.tabbernav li.tabberactive a:hover {
 }
 
 .glyphicon-refresh-animate {
-    -animation: spin 1s infinite linear;
-    -ms-animation: spin 1s infinite linear;
-    -webkit-animation: spinw 1s infinite linear;
-    -moz-animation: spinm 1s infinite linear;
+	-animation: spin 1s infinite linear;
+	-ms-animation: spin 1s infinite linear;
+	-webkit-animation: spinw 1s infinite linear;
+	-moz-animation: spinm 1s infinite linear;
 }
 
-@keyframes spin {
-    from { transform: scale(1) rotate(0deg);}
-    to { transform: scale(1) rotate(360deg);}
-}
-  
-@-webkit-keyframes spinw {
-    from { -webkit-transform: rotate(0deg);}
-    to { -webkit-transform: rotate(360deg);}
+@
+keyframes spin {from { transform:scale(1)rotate(0deg);
+	
 }
 
-@-moz-keyframes spinm {
-    from { -moz-transform: rotate(0deg);}
-    to { -moz-transform: rotate(360deg);}
+to {
+	transform: scale(1) rotate(360deg);
+}
+
+}
+@
+-webkit-keyframes spinw {from { -webkit-transform:rotate(0deg);
+	
+}
+
+to {
+	-webkit-transform: rotate(360deg);
+}
+
+}
+@
+-moz-keyframes spinm {from { -moz-transform:rotate(0deg);
+	
+}
+
+to {
+	-moz-transform: rotate(360deg);
+}
 }
