Add filters to agregattereport
Former-commit-id: b1b74f96574b1320895bd949aaf71bf294594101

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -1228,3 +1228,8 @@ to {
 .warning-import {
 	background-color: #ffc107 !important;
 }
+
+.label100{
+	width: 100% !important;
+    text-align: left !important;
+}
