Fix search seed on segments
Fix import/export to applly delete tag


Former-commit-id: 5be008ddbb30dad651f7a6af76a630f4c69ccb9e

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -1307,3 +1307,14 @@ to {
 	text-overflow: ellipsis;
 }
 
+#loading_cover_div {
+     background: url(/oaw/images/loading.gif) no-repeat scroll center center #000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: none;
+    z-index: 10000;
+    opacity: 0.5;
+}
