Agrregatte report UNE 2019 improvments
Former-commit-id: d48f42648a2c164505ac2dedd359855ac120647e

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -256,6 +256,11 @@ td {
 	margin-top: 8%
 }
 
+.innerFieldset .formItem {
+	margin-top:1%;
+	    height: 35px;
+	
+}
 .eliminateLink {
 	float: right
 }
