--- a/wcagemtool/app/views/footer.html
+++ b/wcagemtool/app/views/footer.html
@@ -1,5 +1,4 @@
-<footer lang="en" ng-controller="FooterCtrl"
-aria-label="Document info" class="page-footer">
+<footer lang="en" ng-controller="FooterCtrl" aria-label="Document info" class="page-footer">
   <div>
     <!-- <p><strong>Feedback: We welcome ideas, bug reports, and comments</strong> via <a href="https://github.com/w3c/wcag-em-report-tool/issues">GitHub</a> or e-mail to <a href="mailto:wai-eo-editors@w3.org">wai-eo-editors@w3.org</a> (a publicly archived list) or <a href="mailto:wai@w3.org">wai@w3.org</a> (a WAI staff-only list).</p>
     <p><strong>Status:</strong> Version {{pkg.version}}, {{pkg.buildDate}}</p>
@@ -9,7 +8,13 @@ aria-label="Document info" class="page-footer">
       <p>[<a href="http://www.w3.org/WAI/sitemap.html">WAI Site Map</a>] [<a href="http://www.w3.org/WAI/sitehelp.html">Help with WAI Website</a>] [<a href="http://www.w3.org/WAI/search.php">Search</a>] [<a href="/WAI/contacts">Contacting WAI</a>]</p>
     </div> -->
     <div class="copyright">
-      <p><a rel="Copyright" href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> © <a href="http://www.w3.org/"><abbr title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup> (<a href="http://www.csail.mit.edu/"><abbr title="Massachusetts Institute of Technology">MIT</abbr></a>, <a href="http://www.ercim.org/"><abbr title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>, <a href="http://www.keio.ac.jp/">Keio</a>, <a href="http://ev.buaa.edu.cn/">Beihang</a>) <a href="/Consortium/Legal/ipr-notice">Usage policies apply</a>.</p>
+      <p>© {{'COMMON.FOOTER_OAW_COPYRIGHT' | translate }}</p> 
+      
+      <p ng-bind-html="'COMMON.FOOTER_OAW_BASED' | translate: {
+        url1: 'http://www.w3.org/WAI/eval/report-tool/#!/',
+        url2: 'http://www.w3.org/',
+        url3: 'http://www.w3.org/WAI',
+      }"></p>
     </div><!-- ends copyright -->
   </div>
 </footer>
