--- a/wcagemtool/app/views/navigation.html
+++ b/wcagemtool/app/views/navigation.html
@@ -2,14 +2,18 @@
   <div class="navbar navbar-default">
     <div class="branding">
       <div class="nav navbar-nav navbar-right">
-        <span class="pae"><a href="https://administracionelectronica.gob.es/">
-          <img alt="Portal de Administración Electrónica" width="73" height="50" src="images/logo-pae-cabecera-accesibilidad.png">
-        </a>
+        <span class="pae"><a href="https://administracionelectronica.gob.es/"
+            title="Punto de Acceso General administracion.gob.es (Abre en nueva ventana)">
+            <img alt="Portal de Administración Electrónica" width="73" height="50"
+              src="images/logo-pae-cabecera-accesibilidad.png">
+          </a>
         </span>
-        <span class="pae"><a href="https://administracionelectronica.gob.es/comunidades/verPestanaGeneral.htm?idComunidad=21">
-          <img alt="Comunidad accesibilidad" width="120" height="50" src="images/logo-oaw-cabecera-accesibilidad.png">
-        </a>
-      </span>
+        <span class="pae"><a
+            href="https://administracionelectronica.gob.es/comunidades/verPestanaGeneral.htm?idComunidad=21"
+            title="Comunidad de Accesibilidad - Punto de Acceso General administracion.gob.es (Abre en nueva ventana)">
+            <img alt="Comunidad accesibilidad" width="120" height="50" src="images/logo-oaw-cabecera-accesibilidad.png">
+          </a>
+        </span>
       </div>
     </div>
 
