--- a/wcagem-tool/wcag-em-report-tool/app/views/directives/successCriterion.html
+++ b/wcagem-tool/wcag-em-report-tool/app/views/directives/successCriterion.html
@@ -1,7 +1,7 @@
 <div class="panel criterion panel-default"
 ng-class="getClassName(assert.result.outcome)">
 
-  <earl-assert class="panel-heading" assert="assert" options="opt">
+  
 
     <div class="col-xs-12 criterion-title">
       <strong>{{ spec.num}} {{ spec.handle}}</strong>: ({{spec.level | rdfToLabel}})
@@ -49,8 +49,10 @@ ng-class="getClassName(assert.result.outcome)">
           <span class="glyphicon glyphicon-new-window"></span></a>
       </p>
     </div>
-    <div class="col-xs-12">{{ 'AUDIT.SAMPLE_FINDINGS' | translate }}:</div>
+    
 
+  <earl-assert class="panel-heading hidden" assert="assert" options="opt">
+    <div class="col-xs-12">{{ 'AUDIT.SAMPLE_FINDINGS' | translate }}:</div>
   </earl-assert>
 
   <div class="crit-detail-btn" ng-if="opt.collapses">
