--- a/wcagemtool/app/styles/report.scss
+++ b/wcagemtool/app/styles/report.scss
@@ -68,6 +68,9 @@
 
 .panel.criterion {
   border-left-width: 6px;
+  float: left;
+  width: 100%;
+  margin-top: 20px;
 
   &.passed {
     border-left-color: #86c8a7;
